--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,13 @@
   <artifactId>spring-petclinic</artifactId>
   <version>2.1.0.BUILD-SNAPSHOT</version>
 
-<distributionManagement>
-    <repository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>corp1</id>
-      <name>Corporate Repository</name>
-      <url>http://54.194.40.171:8082/artifactory/example-repo-local</url>
-      <layout>default</layout>
-    </repository>
-</distributionManagement>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>artifactory</id>
+            <name>artifactory</name>
+            <url>${artifactory_url}</url>
+        </snapshotRepository>
+    </distributionManagement>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
