--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ logging.level.org.springframework=INFO
 
 # Maximum time static resources should be cached
 spring.resources.cache.cachecontrol.max-age=12h
+
+#change port to use, since Jenkins uses 8080
+server.port = 8090
