--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.messages.basename=messages/messages
 management.endpoints.web.base-path=/manage
 management.endpoints.web.exposure.include=*
 
+endpoints.prometheus.enabled=true
+
 # Logging
 logging.level.org.springframework=INFO
 # logging.level.org.springframework.web=DEBUG
