Changed properties to enable endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.messages.basename=messages/messages
 management.endpoints.web.base-path=/manage
 management.endpoints.web.exposure.include=*
 
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
 endpoints.prometheus.enabled=true
 
 # Logging
